--- a/index.html
+++ b/index.html
@@ -231,9 +231,8 @@
       </div>
 
       <h1>Most Popular Movies</h1>
-        <div id="movie-list">
-
-       <div class="movie-item">
+      <div id="movie-list">
+        <div class="movie-item">
           <div class="movie-content">
             <img
               src="https://www.themoviedb.org/t/p/original/pkP718xPz25k0VTEva6MFAydS4I.jpg"
@@ -543,6 +542,42 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://image.tmdb.org/t/p/original/pTSkqMvYvVI5jH8dSqUHTieg9hu.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Bucket List</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 10.0</span
+                >
+              </div>
+              <span class="movie-year-text">2007</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://www.themoviedb.org/t/p/original/lDFO7D4MdbhjOwaPwe18QG69Rt0.jpg"
               class="movie-poster"
             />
@@ -627,6 +662,42 @@
                 >
               </div>
               <span class="movie-year-text">1994</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/2hwvESoPFqwwZnl9hVi8LkboQue.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Count of Monte Cristo</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 10.0</span
+                >
+              </div>
+              <span class="movie-year-text">2002</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -1516,14 +1587,18 @@
           </div>
         </div>
 
-         <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
-            <img src="https://image.tmdb.org/t/p/original/hQq8xZe5uLjFzSBt4LanNP7SQjl.jpg" class="movie-poster" />
+            <img
+              src="https://image.tmdb.org/t/p/original/hQq8xZe5uLjFzSBt4LanNP7SQjl.jpg"
+              class="movie-poster"
+            />
             <h2 class="movie-title">Back to the Future Part II</h2>
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> 10.0</span>
+                  ><img src="./images/IMDb_logo.png" /> 10.0</span
+                >
               </div>
               <span class="movie-year-text">1989</span>
             </div>
@@ -1546,16 +1621,20 @@
               </a>
             </div>
           </div>
-        </div> 
+        </div>
 
-         <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
-            <img src="https://image.tmdb.org/t/p/original/crzoVQnMzIrRfHtQw0tLBirNfVg.jpg" class="movie-poster" />
+            <img
+              src="https://image.tmdb.org/t/p/original/crzoVQnMzIrRfHtQw0tLBirNfVg.jpg"
+              class="movie-poster"
+            />
             <h2 class="movie-title">Back to the Future Part III</h2>
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> 10.0</span>
+                  ><img src="./images/IMDb_logo.png" /> 10.0</span
+                >
               </div>
               <span class="movie-year-text">1990</span>
             </div>
@@ -1578,7 +1657,7 @@
               </a>
             </div>
           </div>
-        </div> 
+        </div>
 
         <div class="movie-item">
           <div class="movie-content">
@@ -1688,14 +1767,18 @@
           </div>
         </div>
 
-         <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
-            <img src="https://image.tmdb.org/t/p/original/nmllsevWzx7XtrlARs3hHJn5Pf.jpg" class="movie-poster" />
-            <h2 class="movie-title">Rush Hour 2 </h2>
+            <img
+              src="https://image.tmdb.org/t/p/original/nmllsevWzx7XtrlARs3hHJn5Pf.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Rush Hour 2</h2>
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> 10.0</span>
+                  ><img src="./images/IMDb_logo.png" /> 10.0</span
+                >
               </div>
               <span class="movie-year-text">2001</span>
             </div>
@@ -1718,16 +1801,20 @@
               </a>
             </div>
           </div>
-        </div> 
+        </div>
 
-         <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
-            <img src="https://image.tmdb.org/t/p/original/iXsbAIZezI0gh0dnOnBbeFuG3AO.jpg" class="movie-poster" />
+            <img
+              src="https://image.tmdb.org/t/p/original/iXsbAIZezI0gh0dnOnBbeFuG3AO.jpg"
+              class="movie-poster"
+            />
             <h2 class="movie-title">Rush Hour 3</h2>
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> 10.0</span>
+                  ><img src="./images/IMDb_logo.png" /> 10.0</span
+                >
               </div>
               <span class="movie-year-text">2007</span>
             </div>
@@ -1750,7 +1837,7 @@
               </a>
             </div>
           </div>
-        </div> 
+        </div>
 
         <div class="movie-item">
           <div class="movie-content">
@@ -1874,6 +1961,42 @@
                 </span>
               </div>
               <span class="movie-year-text">1994</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/bohhidIi1WWU5NNYF9l5wLQu3Ii.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Money Pit</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 10.0</span
+                >
+              </div>
+              <span class="movie-year-text">1986</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -2403,14 +2526,18 @@
           </div>
         </div>
 
-         <div class="movie-item">
+        <div class="movie-item">
           <div class="movie-content">
-            <img src="https://image.tmdb.org/t/p/original/5M0j0B18abtBI5gi2RhfjjurTqb.jpg" class="movie-poster" />
+            <img
+              src="https://image.tmdb.org/t/p/original/5M0j0B18abtBI5gi2RhfjjurTqb.jpg"
+              class="movie-poster"
+            />
             <h2 class="movie-title">Terminator 2: Judgment Day</h2>
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> 9.9</span>
+                  ><img src="./images/IMDb_logo.png" /> 9.9</span
+                >
               </div>
               <span class="movie-year-text">1991</span>
             </div>
@@ -2433,7 +2560,7 @@
               </a>
             </div>
           </div>
-        </div> 
+        </div>
 
         <div class="movie-item">
           <div class="movie-content">
@@ -2485,6 +2612,78 @@
                 >
               </div>
               <span class="movie-year-text">2000</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/m5gPWFZFIp4UJFABgWyLkbXv8GX.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Argo</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.9</span
+                >
+              </div>
+              <span class="movie-year-text">2012</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/ts996lKsxvjkO2yiYG0ht4qAicO.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Gone Girl</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.9</span
+                >
+              </div>
+              <span class="movie-year-text">2014</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
