--- a/MoviePage.html
+++ b/MoviePage.html
@@ -1996,6 +1996,42 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
+                src="https://image.tmdb.org/t/p/original/pvbpsWdvSChCiBa86hNnZVj0pNE.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Multiplicity</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 10.0</span
+                  >
+                </div>
+                <span class="movie-year-text">1996</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
                 src="https://www.themoviedb.org/t/p/original/stJx9BQZbXrZnTGf9Erc7d2UMVc.jpg"
                 class="movie-poster"
               />
@@ -4712,6 +4748,42 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
+                src="https://image.tmdb.org/t/p/original/AoJTHXmO01EZgT0p1YTsGBEQxLj.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Red Heat</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 9.4</span
+                  >
+                </div>
+                <span class="movie-year-text">1988</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
                 src="https://www.themoviedb.org/t/p/original/j5mxLNWjUlXUUk8weFBtnF4afIR.jpg"
                 alt="Movie 2 Poster"
                 class="movie-poster"
@@ -6781,6 +6853,42 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
+                src="https://image.tmdb.org/t/p/original/xWic7kPq13oRxYjbGLApXCnc7pz.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Hustle</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 9.0</span
+                  >
+                </div>
+                <span class="movie-year-text">2022</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
                 src="https://www.themoviedb.org/t/p/original/fZXSwgZknp81vmciTb86rw0MejV.jpg"
                 class="movie-poster"
               />
@@ -7761,6 +7869,42 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
+                src="https://image.tmdb.org/t/p/original/8gZWMhJHRvaXdXsNhERtqNHYpH3.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">The Fly</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 8.0</span
+                  >
+                </div>
+                <span class="movie-year-text">1986</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
                 src="https://www.themoviedb.org/t/p/original/z6dP1sMCwDy600riVOzvgThN4ym.jpg"
                 class="movie-poster"
               />
@@ -8495,6 +8639,42 @@
                   >
                 </div>
                 <span class="movie-year-text">1997</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://image.tmdb.org/t/p/original/bAkVEo8wEy5Q3oD1OxOXN3ijnP9.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Blind Fury</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text"
+                    ><img src="./images/IMDb_logo.png" /> 7.5</span
+                  >
+                </div>
+                <span class="movie-year-text">1989</span>
               </div>
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
