--- a/Watchlist.html
+++ b/Watchlist.html
@@ -4133,7 +4133,7 @@
               src="https://image.tmdb.org/t/p/original/mdLDgQBD0va09npSQX5Zgo2evXM.jpg"
               class="movie-poster"
             />
-            <h2 class="movie-title">Nocturnal Animals (</h2>
+            <h2 class="movie-title">Nocturnal Animals </h2>
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text"
