--- a/index.html
+++ b/index.html
@@ -2310,6 +2310,42 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://image.tmdb.org/t/p/original/uoX4KLDcAfFm7uFFXjRzHSkPuMx.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Drag Me to Hell</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.9</span
+                >
+              </div>
+              <span class="movie-year-text">2009</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://www.themoviedb.org/t/p/original/wjv0KA9HbegREJzC01OdgJxfrsT.jpg"
               class="movie-poster"
             />
@@ -3586,6 +3622,42 @@
                 >
               </div>
               <span class="movie-year-text">1992</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/vNVFt6dtcqnI7hqa6LFBUibuFiw.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Train to Busan</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.7</span
+                >
+              </div>
+              <span class="movie-year-text">2016</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -7456,6 +7528,42 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://image.tmdb.org/t/p/original/rKsiNxKjhWEwndOgWPs273oy9EZ.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Idiocracy</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 8.9</span
+                >
+              </div>
+              <span class="movie-year-text">2006</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://www.themoviedb.org/t/p/original/k3vjihw2akFcGIBepnxixqcBGJq.jpg"
               class="movie-poster"
             />
@@ -8806,6 +8914,42 @@
                 >
               </div>
               <span class="movie-year-text">2007</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/ngnybFTuopfbfmmEeX9jjBQQmF6.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">They Live</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 8.0</span
+                >
+              </div>
+              <span class="movie-year-text">1988</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -11220,6 +11364,42 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://image.tmdb.org/t/p/original/qIegUGJqyMMCRjkKV1s7A9MqdJ8.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Cloverfield</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 6.0</span
+                >
+              </div>
+              <span class="movie-year-text">2008</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://image.tmdb.org/t/p/original/lYfRc57Kx9VgLZ48iulu0HKnM15.jpg"
               class="movie-poster"
             />
@@ -11411,6 +11591,42 @@
                 >
               </div>
               <span class="movie-year-text">1988</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/dEDLY3KeghKFzks5nTDWdigVikr.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Host</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 2.0</span
+                >
+              </div>
+              <span class="movie-year-text">2006</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
